# surf-prediction-project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yaml
data/: Challenge surf forecasting.docx  bio_pysurfline.xlsx  bio_scrap_surfline.xlsx  pg_pysurfline.xlsx  pg_scrap_surfline.xlsx  yatch_pysurfline.xlsx  yatch_scrap_surfline.xlsx
data/raw/: bio_scrap_surfline.xlsx  pg_scrap_surfline.xlsx  yatch_pysurfline.xlsx
main/: Ingesta_pysurfline.ipynb  logs.py  surfline_scrap.ipynb  surfline_scrap.py
main/bio/: bio_pysurfline.ipynb  bio_scrap.ipynb
main/ingestion/bio/: bio_scra.py
main/ingestion/pg/: surfline_scrap.ipynb
main/ingestion/pipeline_ingestion/: pipeline_execution.py
main/ingestion/yatch/: yatch_pysurfline.ipynb  yatch_scra.py
main/pg/: Ingesta_pysurfline.ipynb  ingesta_pysurfline.py  surfline_scrap.ipynb
main/processing/: 1_EDA.ipynb
main/yatch/: yatch_pysurfline.ipynb  yatch_scrap.ipynb
