[tool.poetry]
name = "surf-prediction-project"
version = "0.1.0"
description = ""
authors = ["Dante <dalarroy@emeal.nttdata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
pysurfline = "^0.2.1"
openpyxl = "^3.1.5"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
bs4 = "^0.0.2"
notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
